# IsaacTeleop

./: .gitattributes  .gitignore  .nspect-allowlist.toml  .pre-commit-config.yaml  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  README.md
.github/actions/build-cloudxr-web-client/: action.yml
.github/actions/setup-cuda/: action.yml
.github/actions/setup-v2d-src/: action.yml
.github/workflows/: build-ubuntu.yml  build-windows.yml  docs-cleanup-preview.yaml  docs-preview-on-comment.yaml  docs-preview-on-demand.yaml  docs.yaml  pre-commit.yaml  release-tag.yml  sync-github-project-to-sheets.yml  sync-release-branches.yml
cmake/: IsaacTeleopVersion.cmake
docs/: Makefile  requirements.txt
docs/source/: conf.py  index.rst
docs/source/_templates/: versioning.html
docs/source/device/: manus.rst
docs/source/getting_started/: build_from_source.rst  contributing.rst  quick_start.rst
docs/source/overview/: ecosystem.rst
docs/source/references/: cloudxr.rst  device.rst  license.rst  oob_teleop_control.rst  requirements.rst  retargeting.rst
examples/camera_streamer/: Dockerfile  camera_config.py  camera_sources.py  camera_streamer.sh  teleop_camera_app.py  teleop_camera_sender.py  teleop_camera_subgraph.py
examples/camera_streamer/config/: multi_camera.yaml  single_camera.yaml  stereo_oakd_multi.yaml  v4l2.yaml  zed_mini.yaml
examples/camera_streamer/operators/nv_stream_decoder/: CMakeLists.txt  nv12_to_rgb.cu  nv12_to_rgb.cuh  nv_stream_decoder_op.cpp  nv_stream_decoder_op.hpp  nv_stream_decoder_op_py.cpp
examples/camera_streamer/test/: video_file.yaml
examples/lerobot/: record.py
examples/mcap_record_replay/: CMakeLists.txt
examples/mcap_record_replay/python/: common.py  live_controller.py  live_full_body.py  live_hand.py  pyproject.toml  record_controller.py  record_full_body.py  record_hand.py  replay_controller.py  replay_full_body.py  replay_hand.py
examples/native_openxr/xdev_list/: main.cpp
examples/oxr/cpp/: oxr_session_sharing.cpp
examples/oxr/python/: modular_example.py  test_controller_tracker.py  test_full_body_tracker.py  test_modular.py  test_package_version.py  test_session_sharing.py
examples/retargeting/python/: sharpa_hand_retargeter_demo.py
examples/schemaio/: CMakeLists.txt
examples/teleop/python/: joint_space_device_example.py
examples/teleop_ros2/: AGENTS.md  Dockerfile  README.md
examples/teleop_ros2/python/: messages.py  node_parameters.py  session_config.py  teleop_ros2_node.py  teleop_ros2_publisher.py  tensor_group_helpers.py
examples/teleop_ros2/scripts/: fetch_sharpa_wave_urdfs.py
examples/teleop_session_manager/python/: README.md
preview/jiwenc/revert-docs-preview-split/: genindex.html  searchindex.js
preview/pr-1/: .buildinfo  index.html  searchindex.js
preview/pr-1/.doctrees/: environment.pickle  index.doctree
preview/pr-1/device/: add_device.html  body_tracking.html  trackers.html
preview/pr-1/getting_started/: contributing.html  (+1 more)
preview/pr-2/: objects.inv  searchindex.js
preview/pr-3/: search.html
scripts/: check_dco_signoff.py  download_cloudxr_runtime_sdk.sh  download_cloudxr_sdk.sh  run_cloudxr.sh  run_cloudxr_via_docker.sh  run_tests_with_cloudxr.sh  setup_cloudxr_env.sh  setup_v2d_src.sh
src/core/cloudxr/python/: CMakeLists.txt  __init__.py  __main__.py  env_config.py  oob_teleop_adb.py  oob_teleop_env.py  runtime.py  util.py  wss.py
src/core/pusherio/cpp/: CMakeLists.txt  schema_pusher.cpp
src/core/python/: CMakeLists.txt  bundle_nlopt.py  deviceio_init.py  isaacteleop_init.py  pyproject.toml.in  requirements-cloudxr.txt  requirements-grounding.txt  requirements-retargeters.txt
src/core/retargeting_engine_tests/python/: CMakeLists.txt  pyproject.toml  test_joint_state_retargeter.py  test_joint_state_source.py  test_sharpa_hand_retargeter.py  test_so101_retargeters.py  test_sources.py  test_transforms.py
src/plugins/controller_synthetic_hands/: CMakeLists.txt  controller_synthetic_hands.cpp  hand_generator.cpp  hand_generator.hpp  synthetic_hands_plugin.cpp  synthetic_hands_plugin.hpp
src/plugins/generic_3axis_pedal/: CMakeLists.txt
src/plugins/manus/: 70-manus-hid.rules  CMakeLists.txt  README.md  install_manus.sh  install_udev_rules.sh
src/plugins/manus/app/: CMakeLists.txt
src/plugins/manus/core/: CMakeLists.txt  manus_hand_tracking_plugin.cpp
src/plugins/manus/inc/core/: manus_hand_tracking_plugin.hpp
src/plugins/manus/tools/: CMakeLists.txt  manus_hand_tracker_printer.cpp  manus_hand_visualizer.hpp
src/plugins/plugin_utils/: CMakeLists.txt  hand_injector.cpp
src/plugins/so101_leader/: CMakeLists.txt  README.md  feetech_bus.cpp  feetech_bus.hpp  main.cpp  plugin.yaml  so101_leader_plugin.cpp  so101_leader_plugin.hpp
src/retargeters/: CMakeLists.txt  __init__.py  sharpa_hand_retargeter.py
src/viz/: AGENTS.md  CMakeLists.txt
src/viz/core/cpp/: CMakeLists.txt  device_image.cpp  vk_context.cpp
src/viz/core/cpp/inc/viz/core/: device_image.hpp  vk_context.hpp
src/viz/core_tests/cpp/: CMakeLists.txt  test_device_image.cpp
src/viz/layers/cpp/: CMakeLists.txt  projection_layer.cpp
src/viz/layers/cpp/inc/viz/layers/: projection_layer.hpp  quad_layer.hpp
src/viz/layers_tests/cpp/: CMakeLists.txt  test_projection_layer.cpp  test_quad_layer.cpp
src/viz/python/: core_bindings.cpp  layers_bindings.cpp  session_bindings.cpp  viz_init.py
src/viz/python_tests/: test_projection_layer.py
src/viz/session/cpp/: offscreen_backend.cpp  swapchain.cpp  viz_compositor.cpp  viz_session.cpp  window_backend.cpp  xr_backend.cpp
src/viz/session/cpp/inc/viz/session/: display_backend.hpp  layer_base.hpp  offscreen_backend.hpp  viz_compositor.hpp  viz_session.hpp  window_backend.hpp  xr_backend.hpp
src/viz/session_tests/cpp/: test_offscreen_render.cpp  test_perf_audit.cpp  test_quad_milestone.cpp  test_viz_session.cpp
src/viz/shaders/: CMakeLists.txt
src/viz/shaders/cpp/: CMakeLists.txt  compile_shader.cmake  textured_quad.frag  textured_quad.vert
src/viz/shaders_tests/: CMakeLists.txt
src/viz/shaders_tests/cpp/: CMakeLists.txt  test_shader_blobs.cpp
(+150 files in other folders)
